--- a/portiaui/app/templates/components/spider-structure-listing.hbs
+++ b/portiaui/app/templates/components/spider-structure-listing.hbs
@@ -210,3 +210,7 @@
     </div>
     {{train-scrapely-button spider=spider}}
 {{/tree-list}}
+{{#tree-list hide=currentSample}}
+    {{startcrawl-scrapely-button spider=spider}}
+{{/tree-list}}
+
