--- a/portiaui/app/templates/components/spider-structure-listing.hbs
+++ b/portiaui/app/templates/components/spider-structure-listing.hbs
@@ -213,4 +213,7 @@
 {{#tree-list hide=currentSample}}
     {{startcrawl-scrapely-button spider=spider}}
 {{/tree-list}}
+{{#tree-list hide=currentSample}}
+    {{cancelcrawl-scrapely-button spider=spider}}
+{{/tree-list}}
 
